<resources>
    <string name="app_name">Culinarix</string>


    <!-- Login Page -->
    <string name="welcome">Welcome</string>
    <string name="pls_signin">Please sign in to continue.</string>

    <string name="name">Name</string>

    <string name="email">Email</string>
    <string name="emailError">Invalid email address format.</string>

    <string name="password">Password</string>
    <string name="passwordError">Password cannot be less than 8 characters!</string>
    <string name="login_btn">Login</string>
    <string name="loginError">Invalid Email and Password</string>

    <string name="dontHaveAcc">You don\'t have account? Signup</string>

    <!-- Signup Page -->
    <string name="register">Register</string>
    <string name="pls_signup">Please sign up to login.</string>
    <string name="nameError">Name must only contain letters</string>
    <string name="age">Age</string>
    <string name="ageError">Must 2 Digit</string>
    <string name="domicile">Domicile</string>
    <string name="domicilieError">Invalid domicilie.</string>
    <string name="signupError">Please double check your entries</string>
    <string name="signup_btn">Sign up</string>


    <!-- Detail Page -->
    <string name="tempatmakan">Tempat Makan</string>
    <string name="alamat">Jl.Tempat - Makan</string>

    <!-- Content Based Page -->
    <string name="contentbased">What was your last culinary visit to Bandung?</string>
    <string name="desc">description</string>
    <string name="helloUser">Hello %s,</string>
    <string name="banner">What do you want to eat today in Bandung?</string>
    <string name="recommends">Recommends</string>

    <string name="profile">Profile</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="failedmsg">User not found</string>
    <string name="failedmsgg">Email has been registered </string>



</resources>